# attendance-cpp

./: .commitai  .gitignore  CMakeLists.txt  README.md  Test.cpp  main  main.cpp  test.cpp
services/: AttendanceService.cpp  AttendanceService.h
types/: AttendanceTypes.cpp  AttendanceTypes.h
